force-app/main/default/objects/Product2/fields/Broadcast_cities__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_cities__c</fullName>
    <description>Retorna as cidades das propostas enviadas</description>
    <label>Cidades de veiculação</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>