force-app/main/default/objects/Product2/fields/Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Campaigns__c</fullName>
    <description>Retorna as campanhas da última proposta enviada</description>
    <label>Campanhas</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>