force-app/main/default/objects/Product2/fields/Pieces__c.field-meta.xml
<CustomField>
    <fullName>Pieces__c</fullName>
    <description>Retorna as peças da última proposta enviada</description>
    <label>Peças</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>