force-app/main/default/objects/Product2/fields/Proposals_celebrities__c.field-meta.xml
<CustomField>
    <fullName>Proposals_celebrities__c</fullName>
    <description>Celebridades de todas as propostas enviadas</description>
    <label>Celebridades das propostas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informação vem do SGC</fullName>
            </value>
            <value>
                <fullName>Cauã Reymond</fullName>
                <isActive>false</isActive>
                <label>Cauã Reymond</label>
            </value>
            <value>
                <fullName>Debora Secco</fullName>
                <isActive>false</isActive>
                <label>Debora Secco</label>
            </value>
            <value>
                <fullName>Giovanna Antonelli</fullName>
                <isActive>false</isActive>
                <label>Giovanna Antonelli</label>
            </value>
            <value>
                <fullName>Glória Pires</fullName>
                <isActive>false</isActive>
                <label>Glória Pires</label>
            </value>
            <value>
                <fullName>Jojo Todynho</fullName>
                <isActive>false</isActive>
                <label>Jojo Todynho</label>
            </value>
            <value>
                <fullName>Juliana Paes</fullName>
                <isActive>false</isActive>
                <label>Juliana Paes</label>
            </value>
            <value>
                <fullName>Rodrigo Faro</fullName>
                <isActive>false</isActive>
                <label>Rodrigo Faro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>