force-app/main/default/objects/Product2/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direito de Uso</fullName>
            </value>
            <value>
                <fullName>Campanha</fullName>
            </value>
            <value>
                <fullName>Peça</fullName>
            </value>
            <value>
                <fullName>Mídia</fullName>
            </value>
            <value>
                <fullName>Ajuste de Preço</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>